# lead-generation

./: .gitignore  README.md  pyproject.toml  railway.json  railway.toml  requirements.txt
app/: api.py  config.py  extractor.py  logging_config.py  main.py  schemas.py  user_agents.py  utils.py
app/auth/: auth_bearer.py  internal_or_jwt.py
app/controllers/: email.py  extract.py  search.py
app/helper/: reply_brand_wrapper.py  reply_html.py
app/integrations/: email_verifier.py  neverbounce_provider.py  people_provider.py  proxycurl_provider.py
app/routes/: __init__.py  email.py  extract.py  get_company_size.py  health.py  ingest.py  rag.py  search.py  spam_score.py
app/services/: cold_email_template.py  deficit_collector.py  email_personaliser.py  email_sentiment_analysis.py  footer_parser.py  html_fetcher.py  ingest.py  lead_services.py  linkedin_scrapper.py  llm_parser.py  location.py  process_unfinished_queries.py  rag.py  readiness.py  scrape_linkedin.py  search_engine.py  shared_processing.py  spam_score.py
app/services/email_reply/: constants.py  database_storage.py  email_formatter.py  email_generator.py  response_parser.py  token_utils.py  tools.py
prisma/: schema.prisma
