[project]
name = "lead-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.12.11",
    "beautifulsoup4>=4.13.4",
    "fastapi[standard]>=0.115.12",
    "hypercorn>=0.17.3",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.21",
    "prisma>=0.15.0",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.1.0",
]

[tool.prisma]
home_dir = "."