[project]
name = "lead-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp[speedups]>=3.12.11",
    "beautifulsoup4>=4.13.4",
    "dateparser>=1.2.2",
    "fastapi[standard]>=0.115.12",
    "hypercorn>=0.17.3",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.69",
    "langchain-openai>=0.3.21",
    "langgraph>=0.6.2",
    "prisma>=0.15.0",
    "pyjwt>=2.10.1",
    "pytest-playwright>=0.7.0",
    "python-dotenv>=1.1.0",
    "phonenumbers>=8.13.45",
    "tldextract>=5.1.2",
    "boto3>=1.40,<2.0",
]

[tool.prisma]
home_dir = "."

[dependency-groups]
dev = [
    "basedpyright>=1.31.0",
    "ruff>=0.12.4",
]
